--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@ Basic Styles
 ***************/
 body{
   justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
 
 }
 
@@ -10,6 +12,7 @@ article  {
 	width: 30%;
 	border: 1px solid lightblue;
 	flex-direction: column;
+
 }
 
 .productTitle {
