--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body{
   justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
+  margin-right: 5%;
+  margin-left: 5%;
 
 }
 
@@ -12,7 +14,8 @@ article  {
 	width: 30%;
 	border: 1px solid lightblue;
 	flex-direction: column;
-	margin-top: 20px;
+	margin-top: 30px;
+	justify-content: space-between;
 
 }
 
